--- a/MyFoodPie/app/src/main/res/layout/fragment_roameat_evaluating.xml
+++ b/MyFoodPie/app/src/main/res/layout/fragment_roameat_evaluating.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/lv_rm_evaluating"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null"></ListView>
+        android:divider="@null"></com.handmark.pulltorefresh.library.PullToRefreshListView>
 </LinearLayout>
