--- a/MyFoodPie/app/src/main/res/layout/activity_foodwikibrand.xml
+++ b/MyFoodPie/app/src/main/res/layout/activity_foodwikibrand.xml
@@ -34,8 +34,8 @@
         android:layout_width="match_parent"
         android:background="@color/gray" />
 
-    <ListView
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/lv_foodwiki_brand"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"></com.handmark.pulltorefresh.library.PullToRefreshListView>
 </LinearLayout>
