--- a/MyFoodPie/app/src/main/res/layout/activity_query.xml
+++ b/MyFoodPie/app/src/main/res/layout/activity_query.xml
@@ -27,12 +27,20 @@
             android:background="@null" />
 
         <ImageView
+            android:id="@+id/iv_delete_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:src="@mipmap/ic_analyze_cancel" />
+
+        <ImageView
             android:id="@+id/iv_query_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-
             android:src="@mipmap/ic_home_search" />
     </RelativeLayout>
 
